--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -22,6 +22,6 @@
       </button>
       <span>todo</span>
     </mat-toolbar>
-    <!-- Add Content Here -->
+    <app-todo></app-todo>
   </mat-sidenav-content>
 </mat-sidenav-container>
