--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -2,7 +2,7 @@
   <mat-card-header>
   </mat-card-header>
   <mat-card-content>
-    <form [formGroup]="newTodoForm" (ngSubmit)="onAdd()" >
+    <form [formGroup]="newTodoForm" #todoForm="ngForm" (ngSubmit)="onAdd(todoForm)" >
       <mat-form-field>
         <mat-label>
           Beschreibung
